# stravinsky

./: .coverage  .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_FLOWS.md  ARCHITECTURE_MAP.md  AUTO_INDEXING_TEST_SUMMARY.md  BASELINE_INDEX.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_TEST_IMPLEMENTATION.txt  DELEGATION_FLOW_VERIFICATION.md  FILEWATCHER_DOCS_UPDATE_SUMMARY.md  FILEWATCHER_README.md  GAP_ANALYSIS_PARALLEL_DELEGATION.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_NOTES.md  INSTALL.md  LSP_CLEANUP_FIX.md  LoginForm.tsx  MANIFEST_CREATION_SUMMARY.md  README.md  RECOVERY_GUIDE.md  ROLLBACK_ARCHITECTURE.md  ROLLBACK_IMPLEMENTATION_GUIDE.md  ROLLBACK_INDEX.md  ROLLBACK_QUICK_REFERENCE.md  ROLLBACK_SUMMARY.md  TESTING_AUTO_INDEXING.md  TEST_ARTIFACTS_README.md  UPDATE_MANAGER.md  UPDATE_MANAGER_SUMMARY.md  ai-todo.md  auth0.txt  context-snapshot.md  deploy.sh  deploy_to_pypi.sh  install_native_hooks.py  jwt_io.txt  (+18 more)
.claude/: execution_state.json  settings.json  task_dependencies.json
.stravinsky/: ANALYSIS_SUMMARY.md  CONTINUATION_LOOP_GUIDE.md  HOOK_CONTEXT_DETECTION.md  HOOK_SKILL_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  VERSION_TRACKING_SPEC.md  agents.json  continuation-loop.md  continuation-loop.template.md  mcp_mode  merge_strategy.py  model_config.yaml  routing.json  test_continuation_loop.py
assets/: logo.png.txt
conductor/: create_track.py  product-guidelines.md  product.md  tech-stack.md  tracks.md
docs/: 3WAY_MERGE_ALGORITHM.md  AGENTS.md  AGENT_ORCHESTRATION.md  AGENT_WORKFLOW.md  ARCHITECTURE.md  CALL_FLOW_DIAGRAM.txt  COMMANDS_CONSOLIDATION_REPORT.md  COMMANDS_QUICK_SUMMARY.md  DELEGATION_PATTERNS.md  FILEWATCHER_ARCHITECTURE.md  FILE_WATCHER.md  GEMINI_API_KEY_USAGE.md  HOOKS.md  HOOKS_INSTALLATION.md  IMPLEMENTATION_PLAN.md  INDEX_TOOL_CALL_LOGGING.md  INSTALL.md  KEYRING_AUTH_FIX.md  LSP_MIGRATION_GUIDE.md  MCP_TOOL_CALL_INJECTION_POINTS.md  MCP_TOOL_FLOW.md  MERGE_ALGORITHM_SUMMARY.md  MERGE_DECISION_MATRIX.md  MERGE_IMPLEMENTATION_GUIDE.md  MERGE_README.md  MERGE_TEST_CASES.md  MODEL_ROUTING.md  OAUTH_FLOW.md  PARALLEL_EXECUTION_FIX.md  PHASE1_COMPLETION_SUMMARY.md  QUICKSTART.md  README.md  README_COMMANDS_ANALYSIS.md  REPORT_INDEX.txt  SEARCH_STRATEGY_TEST_SUITE.md  SEARCH_TOOLS_ANALYSIS.md  SEMANTIC_INDEXING_INDEX.md  SEMANTIC_SEARCH_BEST_PRACTICES.md  SEMANTIC_SEARCH_QUICK_START.md  SEMANTIC_WATCHER_USAGE.md  (+11 more)
go_sidecar/: go.mod
logs/: .1c0e2f6784d083818216ed08579b248b799c8d86-audit.json  .270de9f01be3c37438e0ae9542f6c146c85078ae-audit.json
mcp_bridge/: __init__.py  native_search.py  native_watcher.py  notifications.py  server.py  server_tools.py  update_manager.py  update_manager_examples.py  update_manager_pypi.py
rust_native/: Cargo.toml  pyproject.toml
rust_native/src/: git_analysis.rs  hybrid_graph.rs  import_analysis.rs  lib.rs  truncator.rs  watcher.rs
stravinsky_improvements_20260116/: DEPLOYMENT_SUMMARY.md  index.md  metadata.json  model_config_design.md  plan.md  spec.md  (+2 more)
(+313 files in other folders)
