[project]
name = "stravinsky"
version = "0.2.41"
description = "MCP Bridge for Claude Code with Multi-Model Support. Install globally: claude mcp add --scope user stravinsky -- uvx stravinsky. Add to CLAUDE.md: See https://pypi.org/project/stravinsky/"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Stravinsky Team"}
]
keywords = ["mcp", "claude", "gemini", "openai", "oauth"]

dependencies = [
    "mcp>=1.2.1",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth>=2.20.0",
    "openai>=1.0.0",
    "cryptography>=41.0.0",
    "rich>=13.0.0",
    "aiofiles>=23.1.0",
    "psutil>=5.9.0",
    "keyring>=25.7.0",
    "jedi>=0.19.2",
    "ruff>=0.14.10",
    "tenacity>=8.5.0",
]

[project.urls]
Repository = "https://github.com/GratefulDave/stravinsky"
Issues = "https://github.com/GratefulDave/stravinsky/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
stravinsky = "mcp_bridge.server:main"
stravinsky-auth = "mcp_bridge.auth.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_bridge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
