[package]
name = "stravinsky_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stravinsky_native"
crate-type = ["cdylib"]

[dependencies]

pyo3 = { version = "0.21.0", features = ["extension-module"] }

ignore = "0.4.22"

globset = "0.4.14"

walkdir = "2.5.0"

tree-sitter = "0.22.6"

tree-sitter-python = "0.21.0"

tree-sitter-typescript = "0.21.0"



[dev-dependencies]

tempfile = "3.10.1"




